Revision history for Perl module Prima

1.64 202X-XX-XX
 - Use libthai for Drawable.text_wrap
 - PS/PDF font metric calculations simplified and fixed
 - POD printing quality improved

1.63 2021-09-10
 - Fixes for macOS Catalina
 - Drawable changes:
   -- .alpha renamed to .bar_alpha
   -- .alpha and .antialias properties added
      (used GDI+/win32 and XRender/x11 for the implementation)
   -- .lineWidth changed to floating point
   -- the primitives accept floating point coordinates in
      the antialiasing mode
 - Path can produce subpixel quality polygons
 - Image respects .antialias by using Prima::Drawable::Antialias
 - Spinner uses .anitalias (smooth, but slower)
 - TabbedNotebook UI scaling looks better
 - FontMapper respects font styling now (before only regular fonts could be substituted)

1.62 2021-06-16
 - Add opendir/closedir/*dir for unicode operations
 - Add Prima::Drawable::Antialias for drawing aliased graphic primitives
 - Interactive selection change in Edit and PodView does not flicker now
 - Drawable::text_wrap can operate on text together with glyph objects,
      allowing for proper wrapping of shaped text
 - Added ist::OR and ist::AND image stretch types
 - Implemented arabic kashida and interspace justifications for glyphs
 - Markup is a first class citizen with $w->text(\"B<bold>") syntax
   (note: Q was renamed to G and will be used for quoting instead).
 - Minor UI facelift - sliders, buttons, inputline, podview, etc
 - Added Prima::Drawable::Metafile
 - Recognize mouse buttons 4 and 5 on win32
 - win32: support unicode supplementary planes

1.61 2021-04-21
 - DWM API Removed (not useful on Windows 10)
 - Support regions and paths for the PS backend
 - Prima::XXXDialog classes finally moved to Prima::XXX::Dialog
 - Support unicode-aware filesystem functions
   -- Prima::Utils extended and Prima::sys::FS added
   -- Do not use libX11.XReadBitmapFileData as it is not unicode-aware
 - Add Application.stop to break from a running event loop